# Python_Web_Project

./: .gitignore  .python-version  README - Copy.md  README.md  README_old.md  main.py  requirements.txt
CRUD/: crud_operations.py  test_user_photo_operations.py
Instagram_killer/: .example.env  main.py  pyproject.toml
Instagram_killer/docs/: conf.py  index.rst
Instagram_killer/docs/_build/doctrees/: environment.pickle  index.doctree
Instagram_killer/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Instagram_killer/src/conf/: config.py
Instagram_killer/src/database/: db.py
Instagram_killer/src/repository/: comments.py  images.py  logout.py  rating.py  tags.py  users.py
Instagram_killer/src/routes/: auth.py  comments.py  images.py  rating.py  users.py
Instagram_killer/src/schemas/: images.py  rating.py
Instagram_killer/src/services/: auth.py  banned.py  cloudinary.py  email.py  logout.py  qr_code.py  roles.py
Instagram_killer/src/templates/: email_template.html  reset_password.html
Instagram_killer/tests/test_repository/: test_images.py  test_tags.py  test_users.py
Instagram_killer/tests/test_routes/: test_auth.py
killer_instagram/: .example.env  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
killer_instagram/alembic/: env.py
killer_instagram/docs/: conf.py
killer_instagram/tests/: conftest.py  info.txt
src/database/: models.py
src/routes/: auth.py  users.py
src/schemas/: email.py  token.py
src/services/: auth.py  email.py
(+67 files in other folders)
